Bug 1842792, disable speculative load of modulepreload if parser has seen importmap, r=jonco,allstarschh,peterv

Differential Revision: https://phabricator.services.mozilla.com/D183421